# workshop-dw2

./: README.md  pyproject.toml
dw/: dbt_project.yml
dw/models/: schema.yml
dw/models/staging/: stg_commodities.sql  stg_movimentacao_commodities.sql
src/: extract_load.py
