[tool.poetry]
name = "workshop-dw2"
version = "0.1.0"
description = ""
authors = ["Bruno Silva <bruno.ogs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
yfinance = "^0.2.51"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
dbt-postgres = "^1.9.0"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
